code modified, fixed username not showing

--- a/instagram/src/styles/app.css
+++ b/instagram/src/styles/app.css
@@ -512,20 +512,17 @@ video {
 .mb-4 {
   margin-bottom: 1rem;
 }
-.mr-3 {
-  margin-right: 0.75rem;
-}
-.mt-2 {
-  margin-top: 0.5rem;
-}
 .mb-8 {
   margin-bottom: 2rem;
+}
+.mr-3 {
+  margin-right: 0.75rem;
 }
 .mr-6 {
   margin-right: 1.5rem;
 }
-.mr-7 {
-  margin-right: 1.75rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 .flex {
   display: flex;
@@ -533,29 +530,26 @@ video {
 .grid {
   display: grid;
 }
+.h-16 {
+  height: 4rem;
+}
 .h-2 {
   height: 0.5rem;
 }
 .h-8 {
   height: 2rem;
 }
-.h-screen {
-  height: 100vh;
-}
-.h-16 {
-  height: 4rem;
-}
 .h-full {
   height: 100%;
 }
-.h-6 {
-  height: 1.5rem;
-}
-.h-10 {
-  height: 2.5rem;
+.h-screen {
+  height: 100vh;
 }
 .w-2\/5 {
   width: 40%;
+}
+.w-20 {
+  width: 5rem;
 }
 .w-3\/5 {
   width: 60%;
@@ -563,29 +557,14 @@ video {
 .w-6\/12 {
   width: 50%;
 }
-.w-full {
-  width: 100%;
-}
-.w-6 {
-  width: 1.5rem;
-}
-.w-10 {
-  width: 2.5rem;
-}
-.w-20 {
-  width: 5rem;
-}
-.w-10\/12 {
-  width: 83.333333%;
-}
-.w-12 {
-  width: 3rem;
+.w-7 {
+  width: 1.75rem;
 }
 .w-8 {
   width: 2rem;
 }
-.w-7 {
-  width: 1.75rem;
+.w-full {
+  width: 100%;
 }
 .max-w-screen-lg {
   max-width: 1024px;
@@ -610,12 +589,6 @@ video {
 }
 .justify-between {
   justify-content: space-between;
-}
-.justify-around {
-  justify-content: space-around;
-}
-.justify-evenly {
-  justify-content: space-evenly;
 }
 .gap-4 {
   gap: 1rem;
@@ -665,9 +638,6 @@ video {
 .align-middle {
   vertical-align: middle;
 }
-.align-bottom {
-  vertical-align: bottom;
-}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -682,6 +652,10 @@ video {
 }
 .font-bold {
   font-weight: 700;
+}
+.text-black-light {
+  --tw-text-opacity: 1;
+  color: rgb(38 38 38 / var(--tw-text-opacity));
 }
 .text-blue-medium {
   --tw-text-opacity: 1;
@@ -698,10 +672,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-black-light {
-  --tw-text-opacity: 1;
-  color: rgb(38 38 38 / var(--tw-text-opacity));
 }
 .opacity-50 {
   opacity: 0.5;
